[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/settings_menu/settings_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/buttons/button_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/buttons/button_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://ui/buttons/button_focus.tres" type="StyleBox" id=5]
[ext_resource path="res://ui/buttons/button_hover.tres" type="StyleBox" id=6]
[ext_resource path="res://ui/settings_menu/slider.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/pause_menu/credits.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/ui_panel.tres" type="StyleBox" id=9]
[ext_resource path="res://ui/fonts/48x.tres" type="DynamicFont" id=10]
[ext_resource path="res://ui/fonts/64x.tres" type="DynamicFont" id=11]
[ext_resource path="res://ui/fonts/32x.tres" type="DynamicFont" id=12]

[sub_resource type="Animation" id=2]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("./Panel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("./Panel:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Panel:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.05 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Panel:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.95 ]
}

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 1162.38, 37.3887 )
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.15
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.95
rect_pivot_offset = Vector2( 1162.38, 37.3887 )
mouse_filter = 2
custom_styles/panel = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.15
anchor_top = 0.03
anchor_right = 0.85
anchor_bottom = 1.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 672.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 10 )
text = "Settings"
align = 1

[node name="HBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 70.0
margin_right = 672.0
margin_bottom = 500.0
custom_constants/separation = 15
alignment = 1

[node name="Controls" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_right = 672.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../../../HBoxContainer2/Back")
focus_neighbour_top = NodePath("../../../HBoxContainer2/Back")
focus_neighbour_right = NodePath("../Fullscreen")
focus_neighbour_bottom = NodePath("../Fullscreen")
focus_next = NodePath("../Fullscreen")
focus_previous = NodePath("../../../HBoxContainer2/Back")
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 11 )
text = " Controls - NOT IMPLEMENTED"

[node name="Fullscreen" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 75.0
margin_right = 672.0
margin_bottom = 135.0
focus_neighbour_left = NodePath("../Controls")
focus_neighbour_top = NodePath("../Controls")
focus_neighbour_right = NodePath("../AudioVolume")
focus_neighbour_bottom = NodePath("../AudioVolume")
focus_next = NodePath("../AudioVolume")
focus_previous = NodePath("../Controls")
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 11 )
toggle_mode = true
text = "Fullscreen Mode"

[node name="AudioVolume" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 150.0
margin_right = 672.0
margin_bottom = 210.0
focus_neighbour_left = NodePath("../Fullscreen")
focus_neighbour_top = NodePath("../Fullscreen")
focus_neighbour_right = NodePath("../AudioSlider/Slider")
focus_neighbour_bottom = NodePath("../AudioSlider/Slider")
focus_next = NodePath("../AudioSlider/Slider")
focus_previous = NodePath("../Fullscreen")
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 11 )
toggle_mode = true
pressed = true
text = "Audio Volume: On"

[node name="AudioSlider" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 225.0
margin_right = 672.0
margin_bottom = 245.0

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/AudioSlider"]
margin_right = 166.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 12 )
text = "Audio Volume: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer/AudioSlider"]
margin_left = 170.0
margin_right = 672.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../../AudioVolume")
focus_neighbour_top = NodePath("../../AudioVolume")
focus_neighbour_right = NodePath("../../MusicVolume")
focus_neighbour_bottom = NodePath("../../MusicVolume")
focus_next = NodePath("../../MusicVolume")
focus_previous = NodePath("../../AudioVolume")
size_flags_horizontal = 3
custom_styles/slider = ExtResource( 7 )
custom_styles/grabber_area_highlight = ExtResource( 7 )
custom_styles/grabber_area = ExtResource( 7 )
step = 10.0
value = 100.0

[node name="MusicVolume" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 260.0
margin_right = 672.0
margin_bottom = 320.0
focus_neighbour_left = NodePath("../AudioSlider/Slider")
focus_neighbour_top = NodePath("../AudioSlider/Slider")
focus_neighbour_right = NodePath("../MusicSlider/Slider")
focus_neighbour_bottom = NodePath("../MusicSlider/Slider")
focus_next = NodePath("../MusicSlider/Slider")
focus_previous = NodePath("../AudioVolume")
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 11 )
toggle_mode = true
pressed = true
text = "Music Volume: On"

[node name="MusicSlider" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 335.0
margin_right = 672.0
margin_bottom = 355.0

[node name="Value" type="Label" parent="Panel/VBoxContainer/HBoxContainer/MusicSlider"]
margin_right = 166.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 12 )
text = "Music Volume: 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer/MusicSlider"]
margin_left = 170.0
margin_right = 672.0
margin_bottom = 16.0
focus_neighbour_left = NodePath("../../MusicVolume")
focus_neighbour_top = NodePath("../../MusicVolume")
focus_neighbour_right = NodePath("../../ResetStats")
focus_neighbour_bottom = NodePath("../../ResetStats")
size_flags_horizontal = 3
custom_styles/slider = ExtResource( 7 )
custom_styles/grabber_area_highlight = ExtResource( 7 )
custom_styles/grabber_area = ExtResource( 7 )
step = 10.0
value = 100.0
rounded = true

[node name="Credits" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 370.0
margin_right = 672.0
margin_bottom = 430.0
focus_neighbour_left = NodePath("../MusicSlider/Slider")
focus_neighbour_right = NodePath("../Fullscreen")
focus_neighbour_bottom = NodePath("../../../HBoxContainer2/Back")
focus_next = NodePath("../../../HBoxContainer2/Back")
focus_previous = NodePath("../MusicSlider/Slider")
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 11 )
text = "Credits"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 0.85
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Panel/HBoxContainer2"]
margin_left = 348.0
margin_right = 470.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../Save")
focus_neighbour_top = NodePath("../../VBoxContainer/HBoxContainer/Credits")
focus_neighbour_right = NodePath("../Save")
focus_neighbour_bottom = NodePath("../../VBoxContainer/HBoxContainer/Controls")
focus_next = NodePath("../Save")
focus_previous = NodePath("../Save")
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 11 )
text = "Back"

[node name="Save" type="Button" parent="Panel/HBoxContainer2"]
margin_left = 485.0
margin_right = 611.0
margin_bottom = 60.0
focus_neighbour_left = NodePath("../Back")
focus_neighbour_top = NodePath("../../VBoxContainer/HBoxContainer/Credits")
focus_neighbour_right = NodePath("../Back")
focus_neighbour_bottom = NodePath("../../VBoxContainer/HBoxContainer/Controls")
focus_next = NodePath("../../VBoxContainer/HBoxContainer/Controls")
focus_previous = NodePath("../Back")
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 1, 0.580392, 0.580392, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "Save"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show = SubResource( 2 )

[node name="Credits" parent="." instance=ExtResource( 8 )]
